# ROSBaseforCar

communicate/: mcu_bridge_node.cpp
ldlidar/: CMakeLists.txt
ldlidar/launch/: ld14p.launch  ld14p.launch.py  ld14pnet.launch.py
ldlidar/src/: mainnet.cpp
mcu_bridge/: CMakeLists.txt  package.xml
mcu_bridge/src/: mcu_bridge.cpp
mcu_comms/: CMakeLists.txt  package.xml
mcu_comms/launch/: ekf_localization.launch
mcu_comms/src/: mcu_bridge_node.cpp
my_robot/: package.xml
my_robot/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  goal_pose.yaml  init_pose.yaml  local_costmap_params.yaml  port.yaml  slam.yaml
my_robot/launch/: base.launch  navi.launch  slam.launch
my_robot/map/: map.pgm  map.yaml
my_robot/rviz/: navi.rviz  slam.rviz
